// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-i4evwh-StyledIconContainer em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly loading with an icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-n16c8f-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-i4evwh-StyledIconContainer em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-n16c8f-StyledIconContainer em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  .cache-1p1qm9l-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
=======
  .cache-m1xbvb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
>>>>>>> feat: new link component
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-m1xbvb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-m1xbvb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-m1xbvb-StyledLink:hover,
.cache-m1xbvb-StyledLink:focus {
  gap: 4px;
  outline: none;
}

<<<<<<< HEAD
.cache-1p1qm9l-StyledButton:hover,
.cache-1p1qm9l-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1p1qm9l-StyledButton:hover,
.cache-1p1qm9l-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1p1qm9l-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
=======
.cache-m1xbvb-StyledLink:hover::after,
.cache-m1xbvb-StyledLink:focus::after {
  background-color: #390171;
}

.cache-m1xbvb-StyledLink:active::after {
  height: 2px;
}

.cache-m1xbvb-StyledLink[aria-disabled='true'] {
  pointer-events: none;
  color: #bda5df;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
>>>>>>> feat: new link component
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
<<<<<<< HEAD
    class="em6gco80 cache-1p1qm9l-StyledButton"
=======
    class="cache-m1xbvb-StyledLink e4bq1r50"
>>>>>>> feat: new link component
    href="/"
  >
    <span>
      <span
        class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Hello
        </div>
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link with disabled props 1`] = `
<DocumentFragment>
  .cache-1t1ifkf-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
}

.cache-1t1ifkf-StyledButton:hover,
.cache-1t1ifkf-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t1ifkf-StyledButton:hover,
.cache-1t1ifkf-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1t1ifkf-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1t1ifkf-StyledButton"
    disabled=""
    to="/"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as dom link 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
=======
  .cache-m1xbvb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
>>>>>>> feat: new link component
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-m1xbvb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-m1xbvb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-m1xbvb-StyledLink:hover,
.cache-m1xbvb-StyledLink:focus {
  gap: 4px;
  outline: none;
}

<<<<<<< HEAD
.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
=======
.cache-m1xbvb-StyledLink:hover::after,
.cache-m1xbvb-StyledLink:focus::after {
  background-color: #390171;
}

.cache-m1xbvb-StyledLink:active::after {
  height: 2px;
}

.cache-m1xbvb-StyledLink[aria-disabled='true'] {
  pointer-events: none;
  color: #bda5df;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
>>>>>>> feat: new link component
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
<<<<<<< HEAD
    class="em6gco80 cache-a4uads-StyledButton"
    href="/"
=======
    class="cache-m1xbvb-StyledLink e4bq1r50"
>>>>>>> feat: new link component
  >
    <span>
      <span
        class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Hello
        </div>
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1t1ifkf-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
}

.cache-1t1ifkf-StyledButton:hover,
.cache-1t1ifkf-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t1ifkf-StyledButton:hover,
.cache-1t1ifkf-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1t1ifkf-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1t1ifkf-StyledButton"
    disabled=""
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable 1`] = `
<DocumentFragment>
  .cache-1iai93r-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-1iai93r-StyledButton-StyledButton:hover,
.cache-1iai93r-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1iai93r-StyledButton-StyledButton:hover,
.cache-1iai93r-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1iai93r-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-1iai93r-StyledButton-StyledButton .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-left: 0;
  overflow: hidden;
}

.cache-1iai93r-StyledButton-StyledButton:focus .em6gco81,
.cache-1iai93r-StyledButton-StyledButton:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-left: 8px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1iai93r-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable with an icon 1`] = `
<DocumentFragment>
  .cache-1sq8no5-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-1sq8no5-StyledButton-StyledButton:hover,
.cache-1sq8no5-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1sq8no5-StyledButton-StyledButton:hover,
.cache-1sq8no5-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1sq8no5-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-1sq8no5-StyledButton-StyledButton .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-right: 0;
  overflow: hidden;
}

.cache-1sq8no5-StyledButton-StyledButton:focus .em6gco81,
.cache-1sq8no5-StyledButton-StyledButton:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-right: 8x;
}

.cache-vpgnqw-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1sq8no5-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-vpgnqw-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a custom Icon 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

<button
    aria-disabled="false"
    aria-label="icon"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      IconMock
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a rounded action button 1`] = `
<DocumentFragment>
  .cache-18nk8yw-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 16px;
}

.cache-18nk8yw-StyledButton-StyledButton:hover,
.cache-18nk8yw-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-18nk8yw-StyledButton-StyledButton:hover,
.cache-18nk8yw-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-18nk8yw-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-18nk8yw-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    aria-label="check"
    class="em6gco80 cache-18nk8yw-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a tooltip 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-describedby="test"
  >
    <button
      aria-describedby="test"
      aria-disabled="false"
      class="em6gco80 cache-a4uads-StyledButton"
      type="button"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Hello
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render correctly with an action button 1`] = `
<DocumentFragment>
  .cache-1yaq7f1-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-1yaq7f1-StyledButton-StyledButton:hover,
.cache-1yaq7f1-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1yaq7f1-StyledButton-StyledButton:hover,
.cache-1yaq7f1-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1yaq7f1-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-1yaq7f1-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    aria-label="check"
    class="em6gco80 cache-1yaq7f1-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with an icon on the right 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-n16c8f-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-n16c8f-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly without a children 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

<button
    aria-disabled="false"
    aria-label="no content"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should render correctly without a children and an icon 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    aria-label="check icon"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render large 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render medium 1`] = `
<DocumentFragment>
  .cache-16ry3xo-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-16ry3xo-StyledButton:hover,
.cache-16ry3xo-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-16ry3xo-StyledButton:hover,
.cache-16ry3xo-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-16ry3xo-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-16ry3xo-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render small 1`] = `
<DocumentFragment>
  .cache-4a13f4-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 16px;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-4a13f4-StyledButton:hover,
.cache-4a13f4-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4a13f4-StyledButton:hover,
.cache-4a13f4-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-4a13f4-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-4a13f4-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xsmall 1`] = `
<DocumentFragment>
  .cache-1784gyu-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-1784gyu-StyledButton:hover,
.cache-1784gyu-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1784gyu-StyledButton:hover,
.cache-1784gyu-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-1784gyu-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1784gyu-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xxsmall 1`] = `
<DocumentFragment>
  .cache-12w373y-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 12px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-12w373y-StyledButton:hover,
.cache-12w373y-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-12w373y-StyledButton:hover,
.cache-12w373y-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-12w373y-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-12w373y-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info 1`] = `
<DocumentFragment>
  .cache-v9af1t-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #e1ebff;
  color: #1a4dbf;
}

.cache-v9af1t-StyledButton:hover,
.cache-v9af1t-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-v9af1t-StyledButton:hover,
.cache-v9af1t-StyledButton:focus {
  color: #1a4dbf;
  background-color: #c4d5f8;
}

.cache-v9af1t-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(196,213,248,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-v9af1t-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info-bordered 1`] = `
<DocumentFragment>
  .cache-127xpk3-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #3f6ed8;
  background-color: #ffffff;
  color: #3f6ed8;
}

.cache-127xpk3-StyledButton:hover,
.cache-127xpk3-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-127xpk3-StyledButton svg {
  fill: #3f6ed8;
  pointer-events: none;
}

.cache-127xpk3-StyledButton:hover,
.cache-127xpk3-StyledButton:focus {
  border: 1px solid #1a4dbf;
  color: #ffffff;
  background-color: #1a4dbf;
}

.cache-127xpk3-StyledButton:hover svg,
.cache-127xpk3-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-127xpk3-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(26,77,191,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-127xpk3-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render link 1`] = `
<DocumentFragment>
  .cache-17m6xr9-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  padding: 0;
}

.cache-17m6xr9-StyledButton:hover,
.cache-17m6xr9-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17m6xr9-StyledButton:hover,
.cache-17m6xr9-StyledButton:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17m6xr9-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary 1`] = `
<DocumentFragment>
  .cache-a4uads-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #4f0599;
  color: #ffffff;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-a4uads-StyledButton:hover,
.cache-a4uads-StyledButton:focus {
  color: #ffffff;
  background-color: #390171;
}

.cache-a4uads-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-a4uads-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-bordered 1`] = `
<DocumentFragment>
  .cache-1e5n5d-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
}

.cache-1e5n5d-StyledButton:hover,
.cache-1e5n5d-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1e5n5d-StyledButton svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-1e5n5d-StyledButton:hover,
.cache-1e5n5d-StyledButton:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-1e5n5d-StyledButton:hover svg,
.cache-1e5n5d-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-1e5n5d-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1e5n5d-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-soft-bordered 1`] = `
<DocumentFragment>
  .cache-zvcnf1-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
}

.cache-zvcnf1-StyledButton:hover,
.cache-zvcnf1-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zvcnf1-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-zvcnf1-StyledButton:hover,
.cache-zvcnf1-StyledButton:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-zvcnf1-StyledButton:hover svg,
.cache-zvcnf1-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-zvcnf1-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zvcnf1-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary 1`] = `
<DocumentFragment>
  .cache-1t2tslh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #f6f6f8;
  color: #4a4f62;
}

.cache-1t2tslh-StyledButton:hover,
.cache-1t2tslh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t2tslh-StyledButton:hover,
.cache-1t2tslh-StyledButton:focus {
  color: #4a4f62;
  background-color: #d4dae7;
}

.cache-1t2tslh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(212,218,231,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t2tslh-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary-bordered 1`] = `
<DocumentFragment>
  .cache-zvcnf1-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
}

.cache-zvcnf1-StyledButton:hover,
.cache-zvcnf1-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zvcnf1-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-zvcnf1-StyledButton:hover,
.cache-zvcnf1-StyledButton:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-zvcnf1-StyledButton:hover svg,
.cache-zvcnf1-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-zvcnf1-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zvcnf1-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success 1`] = `
<DocumentFragment>
  .cache-v1jr0z-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-v1jr0z-StyledButton:hover,
.cache-v1jr0z-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-v1jr0z-StyledButton:hover,
.cache-v1jr0z-StyledButton:focus {
  color: #ffffff;
  background-color: #149a7b;
}

.cache-v1jr0z-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(20,154,123,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-v1jr0z-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-bordered 1`] = `
<DocumentFragment>
  .cache-1jx2p7o-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #22c8a2;
  background-color: #ffffff;
  color: #22c8a2;
}

.cache-1jx2p7o-StyledButton:hover,
.cache-1jx2p7o-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1jx2p7o-StyledButton svg {
  fill: #22c8a2;
  pointer-events: none;
}

.cache-1jx2p7o-StyledButton:hover,
.cache-1jx2p7o-StyledButton:focus {
  border: 1px solid #149a7b;
  color: #ffffff;
  background-color: #149a7b;
}

.cache-1jx2p7o-StyledButton:hover svg,
.cache-1jx2p7o-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-1jx2p7o-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(20,154,123,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1jx2p7o-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-soft-bordered 1`] = `
<DocumentFragment>
  .cache-2c4zqh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
}

.cache-2c4zqh-StyledButton:hover,
.cache-2c4zqh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-2c4zqh-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-2c4zqh-StyledButton:hover,
.cache-2c4zqh-StyledButton:focus {
  border: 1px solid #149a7b;
  color: #ffffff;
  background-color: #149a7b;
}

.cache-2c4zqh-StyledButton:hover svg,
.cache-2c4zqh-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-2c4zqh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(20,154,123,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-2c4zqh-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render transparent 1`] = `
<DocumentFragment>
  .cache-1norfxg-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
}

.cache-1norfxg-StyledButton:hover,
.cache-1norfxg-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1norfxg-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning 1`] = `
<DocumentFragment>
  .cache-1xtdtyh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #dd3252;
  color: #ffffff;
}

.cache-1xtdtyh-StyledButton:hover,
.cache-1xtdtyh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xtdtyh-StyledButton:hover,
.cache-1xtdtyh-StyledButton:focus {
  color: #ffffff;
  background-color: #a6102d;
}

.cache-1xtdtyh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(166,16,45,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1xtdtyh-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-bordered 1`] = `
<DocumentFragment>
  .cache-qzg02q-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #a6102d;
  background-color: #ffffff;
  color: #a6102d;
}

.cache-qzg02q-StyledButton:hover,
.cache-qzg02q-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qzg02q-StyledButton svg {
  fill: #a6102d;
  pointer-events: none;
}

.cache-qzg02q-StyledButton:hover,
.cache-qzg02q-StyledButton:focus {
  border: 1px solid #a6102d;
  color: #ffffff;
  background-color: #a6102d;
}

.cache-qzg02q-StyledButton:hover svg,
.cache-qzg02q-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-qzg02q-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(166,16,45,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-qzg02q-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-soft-bordered 1`] = `
<DocumentFragment>
  .cache-18wcet-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
}

.cache-18wcet-StyledButton:hover,
.cache-18wcet-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-18wcet-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-18wcet-StyledButton:hover,
.cache-18wcet-StyledButton:focus {
  border: 1px solid #a6102d;
  color: #ffffff;
  background-color: #a6102d;
}

.cache-18wcet-StyledButton:hover svg,
.cache-18wcet-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-18wcet-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(166,16,45,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-18wcet-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;
